// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block 1`] = `
{
  "@": {
    "end": {
      "column": 36,
      "line": 1,
      "offset": 35,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "Block",
  "statements": [
    {
      "@": {
        "end": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": {
          "column": 3,
          "line": 1,
          "offset": 2,
        },
      },
      "argument": {
        "@": {
          "end": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "definitions": [
          {
            "@": {
              "end": {
                "column": 19,
                "line": 1,
                "offset": 18,
              },
              "start": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 19,
                  "line": 1,
                  "offset": 18,
                },
                "start": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
              },
              "kind": "StringLiteral",
              "value": "hello",
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "kind": "ValueIdentifier",
              "value": "msg",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "kind": "ValueIdentifier",
        "value": "log",
      },
      "kind": "FunctionCall",
    },
    {
      "@": {
        "end": {
          "column": 33,
          "line": 1,
          "offset": 32,
        },
        "start": {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 33,
            "line": 1,
            "offset": 32,
          },
          "start": {
            "column": 32,
            "line": 1,
            "offset": 31,
          },
        },
        "kind": "NumberLiteral",
        "value": 4,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
          "start": {
            "column": 28,
            "line": 1,
            "offset": 27,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "ConstantDefinition",
    },
  ],
}
`;

exports[`Block.empty 1`] = `
{
  "@": {
    "end": {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "Block",
  "statements": [],
}
`;

exports[`ConstantDefinition 1`] = `
{
  "@": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "expression": {
    "@": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
    },
    "kind": "NumberLiteral",
    "value": 3,
  },
  "identifier": {
    "@": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "ConstantDefinition",
}
`;

exports[`ConstantDefinition.functionCall 1`] = `
{
  "@": {
    "end": {
      "column": 28,
      "line": 1,
      "offset": 27,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "expression": {
    "@": {
      "end": {
        "column": 28,
        "line": 1,
        "offset": 27,
      },
      "start": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
    },
    "argument": {
      "@": {
        "end": {
          "column": 28,
          "line": 1,
          "offset": 27,
        },
        "start": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
      },
      "definitions": [
        {
          "@": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "expression": {
            "@": {
              "end": {
                "column": 27,
                "line": 1,
                "offset": 26,
              },
              "start": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
            },
            "kind": "ValueIdentifier",
            "value": "point",
          },
          "identifier": {
            "@": {
              "end": {
                "column": 20,
                "line": 1,
                "offset": 19,
              },
              "start": {
                "column": 15,
                "line": 1,
                "offset": 14,
              },
            },
            "kind": "ValueIdentifier",
            "value": "point",
          },
          "kind": "NamedLiteral",
        },
      ],
      "kind": "RecordLiteral",
    },
    "identifier": {
      "@": {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "kind": "ValueIdentifier",
      "value": "foo",
    },
    "kind": "FunctionCall",
  },
  "identifier": {
    "@": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "ConstantDefinition",
}
`;

exports[`Program 1`] = `
{
  "@": {
    "end": {
      "column": 1,
      "line": 7,
      "offset": 106,
    },
    "start": {
      "column": 0,
      "line": 2,
      "offset": 0,
    },
  },
  "kind": "Program",
  "statements": [
    {
      "@": {
        "end": {
          "column": 36,
          "line": 2,
          "offset": 36,
        },
        "start": {
          "column": 3,
          "line": 2,
          "offset": 3,
        },
      },
      "kind": "NamedRecordDefinitionStatement",
      "methods": null,
      "namedRecordDefinition": {
        "@": {
          "end": {
            "column": 36,
            "line": 2,
            "offset": 36,
          },
          "start": {
            "column": 9,
            "line": 2,
            "offset": 9,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 14,
              "line": 2,
              "offset": 14,
            },
            "start": {
              "column": 9,
              "line": 2,
              "offset": 9,
            },
          },
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordDefinition",
        "record": {
          "@": {
            "end": {
              "column": 36,
              "line": 2,
              "offset": 36,
            },
            "start": {
              "column": 14,
              "line": 2,
              "offset": 14,
            },
          },
          "definitions": [
            {
              "@": {
                "end": {
                  "column": 24,
                  "line": 2,
                  "offset": 24,
                },
                "start": {
                  "column": 15,
                  "line": 2,
                  "offset": 15,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 16,
                    "line": 2,
                    "offset": 16,
                  },
                  "start": {
                    "column": 15,
                    "line": 2,
                    "offset": 15,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "@": {
                  "end": {
                    "column": 24,
                    "line": 2,
                    "offset": 24,
                  },
                  "start": {
                    "column": 16,
                    "line": 2,
                    "offset": 16,
                  },
                },
                "kind": "TypeTag",
                "optional": false,
                "typeExpression": {
                  "@": {
                    "end": {
                      "column": 24,
                      "line": 2,
                      "offset": 24,
                    },
                    "start": {
                      "column": 18,
                      "line": 2,
                      "offset": 18,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
              },
            },
            {
              "@": {
                "end": {
                  "column": 35,
                  "line": 2,
                  "offset": 35,
                },
                "start": {
                  "column": 26,
                  "line": 2,
                  "offset": 26,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 27,
                    "line": 2,
                    "offset": 27,
                  },
                  "start": {
                    "column": 26,
                    "line": 2,
                    "offset": 26,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "@": {
                  "end": {
                    "column": 35,
                    "line": 2,
                    "offset": 35,
                  },
                  "start": {
                    "column": 27,
                    "line": 2,
                    "offset": 27,
                  },
                },
                "kind": "TypeTag",
                "optional": false,
                "typeExpression": {
                  "@": {
                    "end": {
                      "column": 35,
                      "line": 2,
                      "offset": 35,
                    },
                    "start": {
                      "column": 29,
                      "line": 2,
                      "offset": 29,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
              },
            },
          ],
          "kind": "RecordDefinition",
        },
      },
    },
    {
      "@": {
        "end": {
          "column": 16,
          "line": 3,
          "offset": 53,
        },
        "start": {
          "column": 3,
          "line": 3,
          "offset": 40,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 16,
            "line": 3,
            "offset": 53,
          },
          "start": {
            "column": 15,
            "line": 3,
            "offset": 52,
          },
        },
        "kind": "NumberLiteral",
        "value": 1,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 12,
            "line": 3,
            "offset": 49,
          },
          "start": {
            "column": 9,
            "line": 3,
            "offset": 46,
          },
        },
        "kind": "ValueIdentifier",
        "value": "one",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 36,
          "line": 4,
          "offset": 90,
        },
        "start": {
          "column": 3,
          "line": 4,
          "offset": 57,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 36,
            "line": 4,
            "offset": 90,
          },
          "start": {
            "column": 17,
            "line": 4,
            "offset": 71,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 22,
              "line": 4,
              "offset": 76,
            },
            "start": {
              "column": 17,
              "line": 4,
              "offset": 71,
            },
          },
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordLiteral",
        "recordLiteral": {
          "@": {
            "end": {
              "column": 36,
              "line": 4,
              "offset": 90,
            },
            "start": {
              "column": 22,
              "line": 4,
              "offset": 76,
            },
          },
          "definitions": [
            {
              "@": {
                "end": {
                  "column": 29,
                  "line": 4,
                  "offset": 83,
                },
                "start": {
                  "column": 23,
                  "line": 4,
                  "offset": 77,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 29,
                    "line": 4,
                    "offset": 83,
                  },
                  "start": {
                    "column": 26,
                    "line": 4,
                    "offset": 80,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "one",
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 24,
                    "line": 4,
                    "offset": 78,
                  },
                  "start": {
                    "column": 23,
                    "line": 4,
                    "offset": 77,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedLiteral",
            },
            {
              "@": {
                "end": {
                  "column": 35,
                  "line": 4,
                  "offset": 89,
                },
                "start": {
                  "column": 31,
                  "line": 4,
                  "offset": 85,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 35,
                    "line": 4,
                    "offset": 89,
                  },
                  "start": {
                    "column": 34,
                    "line": 4,
                    "offset": 88,
                  },
                },
                "kind": "NumberLiteral",
                "value": 2,
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 32,
                    "line": 4,
                    "offset": 86,
                  },
                  "start": {
                    "column": 31,
                    "line": 4,
                    "offset": 85,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedLiteral",
            },
          ],
          "kind": "RecordLiteral",
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 4,
            "offset": 68,
          },
          "start": {
            "column": 9,
            "line": 4,
            "offset": 63,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 1,
          "line": 7,
          "offset": 106,
        },
        "start": {
          "column": 3,
          "line": 6,
          "offset": 95,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 0,
            "line": 7,
            "offset": 105,
          },
          "start": {
            "column": 8,
            "line": 6,
            "offset": 100,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "DEBUG_Log",
    },
  ],
}
`;

exports[`Program.2 1`] = `
{
  "@": {
    "end": {
      "column": 1,
      "line": 11,
      "offset": 211,
    },
    "start": {
      "column": 0,
      "line": 2,
      "offset": 0,
    },
  },
  "kind": "Program",
  "statements": [
    {
      "@": {
        "end": {
          "column": 36,
          "line": 2,
          "offset": 36,
        },
        "start": {
          "column": 3,
          "line": 2,
          "offset": 3,
        },
      },
      "kind": "NamedRecordDefinitionStatement",
      "methods": null,
      "namedRecordDefinition": {
        "@": {
          "end": {
            "column": 36,
            "line": 2,
            "offset": 36,
          },
          "start": {
            "column": 9,
            "line": 2,
            "offset": 9,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 14,
              "line": 2,
              "offset": 14,
            },
            "start": {
              "column": 9,
              "line": 2,
              "offset": 9,
            },
          },
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordDefinition",
        "record": {
          "@": {
            "end": {
              "column": 36,
              "line": 2,
              "offset": 36,
            },
            "start": {
              "column": 14,
              "line": 2,
              "offset": 14,
            },
          },
          "definitions": [
            {
              "@": {
                "end": {
                  "column": 24,
                  "line": 2,
                  "offset": 24,
                },
                "start": {
                  "column": 15,
                  "line": 2,
                  "offset": 15,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 16,
                    "line": 2,
                    "offset": 16,
                  },
                  "start": {
                    "column": 15,
                    "line": 2,
                    "offset": 15,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "@": {
                  "end": {
                    "column": 24,
                    "line": 2,
                    "offset": 24,
                  },
                  "start": {
                    "column": 16,
                    "line": 2,
                    "offset": 16,
                  },
                },
                "kind": "TypeTag",
                "optional": false,
                "typeExpression": {
                  "@": {
                    "end": {
                      "column": 24,
                      "line": 2,
                      "offset": 24,
                    },
                    "start": {
                      "column": 18,
                      "line": 2,
                      "offset": 18,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
              },
            },
            {
              "@": {
                "end": {
                  "column": 35,
                  "line": 2,
                  "offset": 35,
                },
                "start": {
                  "column": 26,
                  "line": 2,
                  "offset": 26,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 27,
                    "line": 2,
                    "offset": 27,
                  },
                  "start": {
                    "column": 26,
                    "line": 2,
                    "offset": 26,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "@": {
                  "end": {
                    "column": 35,
                    "line": 2,
                    "offset": 35,
                  },
                  "start": {
                    "column": 27,
                    "line": 2,
                    "offset": 27,
                  },
                },
                "kind": "TypeTag",
                "optional": false,
                "typeExpression": {
                  "@": {
                    "end": {
                      "column": 35,
                      "line": 2,
                      "offset": 35,
                    },
                    "start": {
                      "column": 29,
                      "line": 2,
                      "offset": 29,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
              },
            },
          ],
          "kind": "RecordDefinition",
        },
      },
    },
    {
      "@": {
        "end": {
          "column": 4,
          "line": 6,
          "offset": 131,
        },
        "start": {
          "column": 3,
          "line": 3,
          "offset": 40,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 4,
            "line": 6,
            "offset": 131,
          },
          "start": {
            "column": 21,
            "line": 3,
            "offset": 58,
          },
        },
        "argument": {
          "@": {
            "end": {
              "column": 35,
              "line": 3,
              "offset": 72,
            },
            "start": {
              "column": 21,
              "line": 3,
              "offset": 58,
            },
          },
          "definitions": [
            {
              "@": {
                "end": {
                  "column": 34,
                  "line": 3,
                  "offset": 71,
                },
                "start": {
                  "column": 22,
                  "line": 3,
                  "offset": 59,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 27,
                    "line": 3,
                    "offset": 64,
                  },
                  "start": {
                    "column": 22,
                    "line": 3,
                    "offset": 59,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "point",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "@": {
                  "end": {
                    "column": 34,
                    "line": 3,
                    "offset": 71,
                  },
                  "start": {
                    "column": 27,
                    "line": 3,
                    "offset": 64,
                  },
                },
                "kind": "TypeTag",
                "optional": false,
                "typeExpression": {
                  "@": {
                    "end": {
                      "column": 34,
                      "line": 3,
                      "offset": 71,
                    },
                    "start": {
                      "column": 29,
                      "line": 3,
                      "offset": 66,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "Point",
                },
              },
            },
          ],
          "kind": "RecordDefinition",
        },
        "block": {
          "@": {
            "end": {
              "column": 4,
              "line": 6,
              "offset": 131,
            },
            "start": {
              "column": 39,
              "line": 3,
              "offset": 76,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 20,
                  "line": 4,
                  "offset": 97,
                },
                "start": {
                  "column": 5,
                  "line": 4,
                  "offset": 82,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 20,
                    "line": 4,
                    "offset": 97,
                  },
                  "start": {
                    "column": 15,
                    "line": 4,
                    "offset": 92,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "point",
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 12,
                    "line": 4,
                    "offset": 89,
                  },
                  "start": {
                    "column": 11,
                    "line": 4,
                    "offset": 88,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "ConstantDefinition",
            },
            {
              "@": {
                "end": {
                  "column": 0,
                  "line": 6,
                  "offset": 127,
                },
                "start": {
                  "column": 5,
                  "line": 5,
                  "offset": 103,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 0,
                    "line": 6,
                    "offset": 127,
                  },
                  "start": {
                    "column": 12,
                    "line": 5,
                    "offset": 110,
                  },
                },
                "identifier": {
                  "@": {
                    "end": {
                      "column": 17,
                      "line": 5,
                      "offset": 115,
                    },
                    "start": {
                      "column": 12,
                      "line": 5,
                      "offset": 110,
                    },
                  },
                  "kind": "TypeIdentifier",
                  "value": "Point",
                },
                "kind": "NamedRecordLiteral",
                "recordLiteral": {
                  "@": {
                    "end": {
                      "column": 0,
                      "line": 6,
                      "offset": 127,
                    },
                    "start": {
                      "column": 17,
                      "line": 5,
                      "offset": 115,
                    },
                  },
                  "definitions": [
                    {
                      "@": {
                        "end": {
                          "column": 22,
                          "line": 5,
                          "offset": 120,
                        },
                        "start": {
                          "column": 18,
                          "line": 5,
                          "offset": 116,
                        },
                      },
                      "expression": {
                        "@": {
                          "end": {
                            "column": 22,
                            "line": 5,
                            "offset": 120,
                          },
                          "start": {
                            "column": 21,
                            "line": 5,
                            "offset": 119,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "x",
                      },
                      "identifier": {
                        "@": {
                          "end": {
                            "column": 19,
                            "line": 5,
                            "offset": 117,
                          },
                          "start": {
                            "column": 18,
                            "line": 5,
                            "offset": 116,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "x",
                      },
                      "kind": "NamedLiteral",
                    },
                    {
                      "@": {
                        "end": {
                          "column": 28,
                          "line": 5,
                          "offset": 126,
                        },
                        "start": {
                          "column": 24,
                          "line": 5,
                          "offset": 122,
                        },
                      },
                      "expression": {
                        "@": {
                          "end": {
                            "column": 28,
                            "line": 5,
                            "offset": 126,
                          },
                          "start": {
                            "column": 27,
                            "line": 5,
                            "offset": 125,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "y",
                      },
                      "identifier": {
                        "@": {
                          "end": {
                            "column": 25,
                            "line": 5,
                            "offset": 123,
                          },
                          "start": {
                            "column": 24,
                            "line": 5,
                            "offset": 122,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "y",
                      },
                      "kind": "NamedLiteral",
                    },
                  ],
                  "kind": "RecordLiteral",
                },
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "kind": "AnonymousFunctionLiteral",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 18,
            "line": 3,
            "offset": 55,
          },
          "start": {
            "column": 9,
            "line": 3,
            "offset": 46,
          },
        },
        "kind": "ValueIdentifier",
        "value": "increment",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 36,
          "line": 7,
          "offset": 168,
        },
        "start": {
          "column": 3,
          "line": 7,
          "offset": 135,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 36,
            "line": 7,
            "offset": 168,
          },
          "start": {
            "column": 17,
            "line": 7,
            "offset": 149,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 22,
              "line": 7,
              "offset": 154,
            },
            "start": {
              "column": 17,
              "line": 7,
              "offset": 149,
            },
          },
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordLiteral",
        "recordLiteral": {
          "@": {
            "end": {
              "column": 36,
              "line": 7,
              "offset": 168,
            },
            "start": {
              "column": 22,
              "line": 7,
              "offset": 154,
            },
          },
          "definitions": [
            {
              "@": {
                "end": {
                  "column": 29,
                  "line": 7,
                  "offset": 161,
                },
                "start": {
                  "column": 23,
                  "line": 7,
                  "offset": 155,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 29,
                    "line": 7,
                    "offset": 161,
                  },
                  "start": {
                    "column": 26,
                    "line": 7,
                    "offset": 158,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "one",
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 24,
                    "line": 7,
                    "offset": 156,
                  },
                  "start": {
                    "column": 23,
                    "line": 7,
                    "offset": 155,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedLiteral",
            },
            {
              "@": {
                "end": {
                  "column": 35,
                  "line": 7,
                  "offset": 167,
                },
                "start": {
                  "column": 31,
                  "line": 7,
                  "offset": 163,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 35,
                    "line": 7,
                    "offset": 167,
                  },
                  "start": {
                    "column": 34,
                    "line": 7,
                    "offset": 166,
                  },
                },
                "kind": "NumberLiteral",
                "value": 2,
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 32,
                    "line": 7,
                    "offset": 164,
                  },
                  "start": {
                    "column": 31,
                    "line": 7,
                    "offset": 163,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedLiteral",
            },
          ],
          "kind": "RecordLiteral",
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 7,
            "offset": 146,
          },
          "start": {
            "column": 9,
            "line": 7,
            "offset": 141,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 26,
          "line": 8,
          "offset": 195,
        },
        "start": {
          "column": 3,
          "line": 8,
          "offset": 172,
        },
      },
      "argument": {
        "@": {
          "end": {
            "column": 26,
            "line": 8,
            "offset": 195,
          },
          "start": {
            "column": 12,
            "line": 8,
            "offset": 181,
          },
        },
        "definitions": [
          {
            "@": {
              "end": {
                "column": 25,
                "line": 8,
                "offset": 194,
              },
              "start": {
                "column": 13,
                "line": 8,
                "offset": 182,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 25,
                  "line": 8,
                  "offset": 194,
                },
                "start": {
                  "column": 20,
                  "line": 8,
                  "offset": 189,
                },
              },
              "kind": "ValueIdentifier",
              "value": "point",
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 18,
                  "line": 8,
                  "offset": 187,
                },
                "start": {
                  "column": 13,
                  "line": 8,
                  "offset": 182,
                },
              },
              "kind": "ValueIdentifier",
              "value": "point",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 12,
            "line": 8,
            "offset": 181,
          },
          "start": {
            "column": 3,
            "line": 8,
            "offset": 172,
          },
        },
        "kind": "ValueIdentifier",
        "value": "increment",
      },
      "kind": "FunctionCall",
    },
    {
      "@": {
        "end": {
          "column": 1,
          "line": 11,
          "offset": 211,
        },
        "start": {
          "column": 3,
          "line": 10,
          "offset": 200,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 0,
            "line": 11,
            "offset": 210,
          },
          "start": {
            "column": 8,
            "line": 10,
            "offset": 205,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "DEBUG_Log",
    },
  ],
}
`;

exports[`ReturnStatement 1`] = `
{
  "@": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "expression": {
    "@": {
      "end": {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "StringLiteral",
    "value": "string",
  },
  "kind": "ReturnStatement",
}
`;

exports[`string 1`] = `
{
  "@": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "StringLiteral",
  "value": "hello world",
}
`;

exports[`string 2`] = `
{
  "@": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "StringLiteral",
  "value": "hello
 world",
}
`;
